3/5/2018 1.7.3.4
    user visible changes:
    * improved do_remove_empty_folders command by using try/except around each remove command
            so that if one folder/file fails to be removed the code will continue to remove other folders/files.
            also message is printed for each failed file/folder

2/5/2018 1.7.3.3
    admin visible changes:
    * fixed and improved the code that uploads to s3
    * PlatformSpecificHelperLinux.rm_file_or_dir was not implemented, now it is
    * SVNTable.update_parent_ids_q: parent_id of top level dirs is set to 0
    * wtar with bz2 compression: changed compressleve to 1 instead of the default 9. This proved to create wtars that are only 2% more in size but unwtar is 13% faster, see CEN-1711

1/5/2018 1.7.3.2
    user visible changes:
    * fixed: sources that were single wtar file were not copied to destination

1/5/2018 1.7.3.1

    programmer visible changes:
    * InstlClientCopy.create_copy_instructions_for_no_copy_folder, removed sorted from self.items_table.get_sources_for_iid(IID) because get_sources_for_iid already returns sorted results and sorting of sqlite1.Row objects is no supported, CEN-1774

29/4/2018 1.7.3.0
    user visible changes:
    * direct-sync folders that have Info.xml will not be checkedsum or downloaded if Info.xml is present and has correct checksum

    admin visible changes:
    * --db option to read/write from database at a none default location, get_db_url & InstlInstanceBase.init_db implement this, path is saved in new configVar __DB_INPUT_FILE__
    * removed unused code that created .txt versions of info-maps
    * in InstlAdmin.do_create_repo_rev_file replaced usage of TARGET_REPO_REV with __CURR_REPO_FOLDER_HIERARCHY__ to accommodate to both styles of folder hierarchy (01/23 & 123)
    * ditto InstlInstanceBase.in repo_rev_to_folder_hierarchy

    programmer visible changes: